--- a/apps/home/src/app/app.component.html
+++ b/apps/home/src/app/app.component.html
@@ -1,12 +1,13 @@
 <div style="text-align:center">
   <h1>Welcome to {{ title }}!</h1>
   <div>
-    Quick Links
-    | <a [routerLink]="''">Home</a>
+    [ <a [routerLink]="''">Home</a>
     <!--
     | <a [routerLink]="'/alpha'">Alpha</a>
     | <a [routerLink]="'/beta'">Beta</a>
     -->
+    ] - Language: <strong>{{ 'LABELS.LANGUAGE' | translate }}</strong>
+    | Component: <strong>{{ 'LABELS.COMPONENT' | translate }}</strong>
   </div>
 </div>
 <div style="margin: 20px; border: dashed 1px silver;">
