--- a/apps/home/src/app/home-feature/home-feature.component.html
+++ b/apps/home/src/app/home-feature/home-feature.component.html
@@ -1,4 +1,6 @@
-<h3>home-feature works!</h3>
-<p>
-  Component: <strong>{{ 'LABELS.COMPONENT' | translate }}</strong>
-</p>
+<div style="padding: 0 20px 20px;">
+  <h3>home-feature works!</h3>
+  <div>
+    Component: <strong>{{ 'LABELS.COMPONENT' | translate }}</strong>
+  </div>
+</div>
