adding basic state to beta app

--- a/apps/alpha/src/app/app.component.html
+++ b/apps/alpha/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div style="text-align:center">
   <h1>Welcome to {{ title }}!</h1>
   <div>
-    [ <a [routerLink]="''">Alpha</a>
+    [ <a [routerLink]="''">Beta</a>
     ] - Language: <strong>{{ 'LABELS.LANGUAGE' | translate }}</strong>
     | Component: <strong>{{ 'LABELS.COMPONENT' | translate }}</strong>
   </div>
